--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@ h3{
 main section{
     height: 100vh;
 }
-main section:nth-of-type(1){
-    background: linear-gradient(45deg, lightgreen, lightblue, lightgreen);
+main section:nth-of-type(1) {
+    background: linear-gradient(45deg, blue, lightgreen, blue);
     background-size: 400% 400%;
     -webkit-animation: bgGradientAnimation 10s ease infinite;
     animation: bgGradientAnimation 10s ease infinite;
